Do not include externally sourced twitter-text.js in tree.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ templates/default/datepicker
 .emacs.desktop
 .emacs.desktop.lock
 templates/default/MultiSelect
+templates/default/js/twitter-text.js
