Ignore (hopefully temporary) local link to modified Net::Twitter::Lite

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ templates/default/datepicker
 .emacs.desktop.lock
 templates/default/MultiSelect
 templates/default/js/twitter-text.js
+modules/Net
