--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ autodocs/
 images/
 !templates/default/images
 !templates/default/userbar/images
+!templates/default/js/lightface/images
 config/site.cfg
 ckeditor
 testharness.pl
