--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,5 @@ templates/default/js/datepicker
 templates/default/js/MultiSelect
 templates/default/js/twitter-text.js
 templates/default/js_*
+templates/default/css_*
 modules/Net
