--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ testharness.pl
 .emacs.desktop.lock
 templates/default/js/datepicker
 templates/default/js/MultiSelect
+templates/default/js/ScrollSpy
 templates/default/js/twitter-text.js
 templates/default/js_*
 templates/default/css_*
