--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ templates/default/js/datepicker
 templates/default/js/MultiSelect
 templates/default/js/ScrollSpy
 templates/default/js/twitter-text.js
+templates/default/js/ZeroClipboard
 templates/default/js_*
 templates/default/css_*
 modules/Net
